Fixed CSS shadow overlap on header.

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -10,6 +10,7 @@
     vertical-align: middle;
     line-height: 6vh;
     box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2);
+    z-index: 1;
 }
 
 .header div ul {
